tests/baselines/reference/asyncFunctionReturnExpressionErrorSpans.errors.txt
asyncFunctionReturnExpressionErrorSpans.ts(16,21): error TS2322: Type 'number' is not assignable to type 'string'.


==== asyncFunctionReturnExpressionErrorSpans.ts (1 errors) ====
    interface Foo {
        bar: {
            baz: {
                inner: {
                    thing: string
                }
            }
        }
    }
    
    async function asyncFoo(): Promise<Foo> {
        return {
            bar: {
                baz: {
                    inner: {
                        thing: 1
                        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 asyncFunctionReturnExpressionErrorSpans.ts:5:17: The expected type comes from property 'thing' which is declared here on type '{ thing: string; }'
                    }
                }
            }
        }
    }